--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,15 @@
 spring.application.name=transferencia
 
 # Database Configuration
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:h2:mem:transferencia_db
 spring.datasource.generate-unique-name=false
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 
-# Production Logging: Hide stack traces & root INFO
-logging.level.root=INFO
-server.error.include-stacktrace=never
+# Local Dev Logging: Full debug info
+logging.level.root=DEBUG
