feat: add OpenAPI documentation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,6 @@ spring.datasource.password=
 
 # Local Dev Logging: Full debug info
 logging.level.root=DEBUG
+
+# API Documentation
+springdoc.api-docs.path=/api-docs
