--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=password
 # Production Logging: Hide stack traces & root INFO
 logging.level.root=INFO
 server.error.include-stacktrace=never
+
+# API Documentation
+springdoc.api-docs.path=/api-docs
