--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,12 +7,13 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:h2:mem:transferencia_db
 spring.datasource.generate-unique-name=false
-spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Local Dev Logging: Full debug info
-logging.level.root=DEBUG
+# Local Dev Logging
+logging.level.root=INFO
 
 # API Documentation
 springdoc.api-docs.path=/api-docs
