--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,13 @@ spring.application.name=transferencia
 # Database Configuration
 spring.datasource.url=jdbc:h2:mem:transferencia_db
 spring.datasource.generate-unique-name=false
-spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Production Logging: Hide stack traces & root INFO
-logging.level.root=INFO
+# Production Logging
+logging.level.root=WARN
 server.error.include-stacktrace=never
 
 # API Documentation
