--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Production Logging
 logging.level.root=WARN
-server.error.include-stacktrace=never
+spring.web.error.include-stacktrace=never
 
 # API Documentation
 springdoc.api-docs.path=/api-docs
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
